--- a/boot/zephyr/prj.conf
+++ b/boot/zephyr/prj.conf
@@ -38,3 +38,9 @@ CONFIG_MINIMAL_LIBC=y
 
 CONFIG_BOOT_DIRECT_XIP=y
 CONFIG_STM32_MEMMAP=y
+
+# CONFIG_BOOT_MAX_IMG_SECTORS_AUTO=n
+# CONFIG_BOOT_MAX_IMG_SECTORS=512
+
+# CONFIG_MCUBOOT_IMG_MANAGER=y
+# CONFIG_IMG_MANAGER=y
